<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory android:title="@string/setting_view">
        <CheckBoxPreference
            android:key="setting_showhidden"
            android:title="@string/setting_view_show_hidden"
            android:summaryOn="@string/setting_view_show_hidden_tip"
            android:summaryOff="@string/setting_view_show_hidden_tip"
            android:defaultValue="false"
        />
	    <CheckBoxPreference
            android:key="setting_showthumb"
            android:title="@string/setting_view_show_thumbnail"
            android:summaryOn="@string/setting_view_show_thumbnail_tip"
            android:summaryOff="@string/setting_view_show_thumbnail_tip"
            android:defaultValue="true"
        />
        <Preference 
        	android:key="setting_clearcache"
            android:title="@string/setting_view_clear_cache"
            android:summary="@string/setting_view_clear_cache_tip"
        />
        <ListPreference
        	android:id="@+id/setting_ui_theme"
	        android:key="setting_ui_theme"
	        android:title="@string/setting_ui_theme"
	        android:summary="@string/setting_ui_theme_tip"
	        android:dialogTitle="@string/setting_ui_theme"
	        android:entries="@array/entries_list_setting_ui_theme"
	        android:entryValues="@array/entriesvalue_list_setting_ui_theme"
        	/>
        <ListPreference
        	android:id="@+id/setting_ui_color"
	        android:key="setting_ui_color"
	        android:title="@string/setting_ui_color"
	        android:summary="@string/setting_ui_color_tip"
	        android:dialogTitle="@string/setting_ui_color"
	        android:entries="@array/entries_list_setting_ui_color"
	        android:entryValues="@array/entriesvalue_list_setting_ui_color"
        	/>
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/setting_preferences">
        <EditTextPreference 
        	android:id="@+id/setting_home"
        	android:key="setting_home"
            android:title="@string/setting_preferences_home"
            android:summary=""
        />
        <CheckBoxPreference
            android:key="setting_useen"
            android:title="@string/setting_preferences_useen"
            android:summaryOn="@string/setting_preferences_useen_on_tip"
            android:summaryOff="@string/setting_preferences_useen_off_tip"
            android:defaultValue="false"
        />
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/setting_about">
        <Preference 
            android:key="setting_about"
            android:title=""
        />
        <Preference 
            android:key="setting_feedback"
            android:title="@string/setting_about_feedback"
            android:summary="mailto:dxdroid@gmail.com"
        />
    </PreferenceCategory>
</PreferenceScreen>